# divisorpdf_fgn_repo

./: GUIA_INSTALACION.md  README.md  app.py  image_analyzer.py  manual_tecnico.md  manual_usuario.md  pdf_processor.py  pyproject.toml
